--- a/src/BruteForcePasswordCracking.form
+++ b/src/BruteForcePasswordCracking.form
@@ -30,7 +30,11 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+          <lineWrap value="true"/>
+          <wrapStyleWord value="true"/>
+        </properties>
       </component>
       <component id="d8f94" class="javax.swing.JButton" binding="clearButton" default-binding="true">
         <constraints>
@@ -62,7 +66,11 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+          <lineWrap value="true"/>
+          <wrapStyleWord value="true"/>
+        </properties>
       </component>
       <component id="66123" class="javax.swing.JButton" binding="bruteForceBchButton">
         <constraints>
